--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     position: absolute;
     width: 100%;
     height: auto;
